--- a/wrk/rust/hello/Cargo.toml
+++ b/wrk/rust/hello/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hyper = { version = "0.14", features = [ "server", "backports", "http1", "runtime" ]}
+tokio = { version = "1.28", features = [ "rt-multi-thread", "macros" ]}
